src/objects/ChainStep__c.object
<CustomObject>
    <fields>
        <fullName>Chain__c</fullName>
        <label>Chain</label>
        <referenceTo>Chain__c</referenceTo>
        <relationshipLabel>ChainSteps</relationshipLabel>
        <relationshipName>ChainSteps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ConfigurationId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Configuration</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>ChainSteps</relationshipLabel>
        <relationshipName>ChainSteps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ChainStep</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChainSteps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>